implement CircuitBreaker in user serivce

--- a/UserServices/src/main/resources/application.properties
+++ b/UserServices/src/main/resources/application.properties
@@ -9,7 +9,44 @@ spring.jpa.show-sql=true
 
 server.port=8081
 
-eureka.instance.prefer-ip-address=true
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+####################################################################### eureka properties #####################################################################
+
+#eureka.instance.prefer-ip-address=true
+#eureka.client.fetch-registry=true
+#eureka.client.register-with-eureka=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.config.import=configserver:http://localhost:8085
+
+######################################################################## acuator properties #####################################################################
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+######################################################################## resilience4j #####################################################################
+
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.wait-duration-in-open-state=6s
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-size=10
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.sliding-window-type=COUNT_BASED
+
+
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.register-health-indicator=true
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.wait-duration-in-open-state=6s
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.sliding-window-size=10
+resilience4j.circuitbreaker.instances.ratingHotelBreakerAll.sliding-window-type=COUNT_BASED
+
+
+
+
