--- a/HotelService/src/main/resources/application.properties
+++ b/HotelService/src/main/resources/application.properties
@@ -9,9 +9,10 @@ spring.jpa.show-sql=true
 
 server.port=8082
 
-eureka.instance.prefer-ip-address=true
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.instance.prefer-ip-address=true
+#eureka.client.fetch-registry=true
+#eureka.client.register-with-eureka=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 
+spring.config.import=configserver:http://localhost:8085
